# storage/api-docs/api-docs.json
@@ -14,6 +14,52 @@
     },
     "paths": {
         "/api/v1": {},
+        "/api/v1/oauth/token": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Get authorization Token",
+                "description": "Returns a Bearer token",
+                "operationId": "getToken",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "client_id": {
+                                        "type": "string"
+                                    },
+                                    "client_secret": {
+                                        "type": "string"
+                                    },
+                                    "grant_type": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "client_id": "3",
+                                    "client_secret": "wae3tco18YmxsW25nLuTNlNSjG2pixqD6yJ9V6rh",
+                                    "grant_type": "client_credentials"
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Authenticated"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/api/v1/countries": {
             "get": {
                 "tags": [
@@ -22,6 +68,16 @@
                 "summary": "Get list of countries",
                 "description": "Returns list of countries",
                 "operationId": "getCountriesList",
+                "parameters": [
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Successful operation",
@@ -293,6 +349,16 @@
                 "summary": "Get list of painters",
                 "description": "Returns list of painters",
                 "operationId": "getPaintersList",
+                "parameters": [
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Successful operation",
